Fixed some docker problems